# tier-sol-miner

./: .gitignore  Anchor.toml  package-lock.json
programs/tier-sol-miner/: Cargo.toml
programs/tier-sol-miner/src/: errors.rs  lib.rs  math.rs
programs/tier-sol-miner/src/contexts/: add_tier.rs  claim_interest.rs  compound.rs  increase_stake.rs  init_staking.rs  init_whitelist.rs  initialize.rs  mod.rs  referral_withdraw.rs  terminate_staking.rs  update_mine.rs  update_tier.rs  whitelist.rs  withdraw.rs
programs/tier-sol-miner/src/states/: mine.rs  mod.rs  referral.rs  tier.rs  user.rs  whitelist.rs
scripts/: add_tier.ts  constants.ts  init_devnet.ts  init_mainnet.ts  mint.ts  shared.ts
tests/: tier-sol-miner.ts
