[package]
name = "tier-sol-miner"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tier_sol_miner"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
anchor-spl = {version = "0.29.0"}
spl-token = {version = "=3.1.1", features = ["no-entrypoint"]}
spl-token-2022 = { version = "=2.0.1", features = ["no-entrypoint"] }
solana-program = "=1.17.17"
uint = "0.9"
